add style on calcs to vscode

--- a/Exercises_List_1/Q1.md
+++ b/Exercises_List_1/Q1.md
@@ -96,24 +96,20 @@ Assim como as distâncias Euclidiana e Manhattan, a métrica de Minkowski satisf
 
 - **Distância de Manhattan ($p = 1$):**
 
-  ```math
-  d(\mathbf{u}, \mathbf{v}) = \sum_{i=1}^n |u_i - v_i|
-  ```
+  $d(\mathbf{u}, \mathbf{v}) = \sum_{i=1}^n |u_i - v_i|$
 
   Neste caso, a métrica mede a soma das diferenças absolutas entre as coordenadas.
 
 - **Distância Euclidiana ($p = 2$):**
 
-  ```math
-  d(\mathbf{u}, \mathbf{v}) = \sqrt{\sum_{i=1}^n (u_i - v_i)^2}
-  ```
+  $d(\mathbf{u}, \mathbf{v}) = \sqrt{\sum_{i=1}^n (u_i - v_i)^2}$
 
   Aqui, a métrica mede a distância em linha reta entre os dois vetores.
 
 - **Limite para $p \to \infty$ (Distância de Chebyshev):**
-  ```math
-  d(\mathbf{u}, \mathbf{v}) = \max_{i=1}^n |u_i - v_i|
-  ```
+
+  $d(\mathbf{u}, \mathbf{v}) = \max_{i=1}^n |u_i - v_i|$
+
   Neste caso, a métrica considera a maior diferença absoluta entre as coordenadas.
 
 ### Aplicações
