add pearson correlation

--- a/Exercises_List_1/Q1.md
+++ b/Exercises_List_1/Q1.md
@@ -146,6 +146,36 @@ Injeção de Gás". Nesse trabalho, a distância de Mahalanobis é usada para ca
 
 Essa abordagem permite uma detecção mais precisa e rápida de falhas em comparação com métodos baseados na distância euclidiana, pois considera as correlações entre as variáveis do processo.
 
+## Coeficiente de Correlação de Pearson
+
+O coeficiente de correlação de Pearson é uma medida estatística que avalia a força e a direção da relação linear entre duas variáveis contínuas.
+
+A fórmula para calcular o coeficiente de correlação de Pearson entre duas variáveis $X$ e $Y$ é dada por:
+
+$r = \frac{\sum_{i=1}^n (X_i - \bar{X})(Y_i - \bar{Y})}{\sqrt{\sum_{i=1}^n (X_i - \bar{X})^2 \sum_{i=1}^n (Y_i - \bar{Y})^2}}$
+
+Onde:
+
+- $X_i$ e $Y_i$ são os valores individuais das variáveis $X$ e $Y$,
+- $\bar{X}$ e $\bar{Y}$ são as médias das variáveis $X$ e $Y$,
+- $n$ é o número de observações.
+
+O valor de $r$ varia entre -1 e 1:
+
+- **$r = 1$** indica uma correlação linear positiva perfeita,
+- **$r = -1$** indica uma correlação linear negativa perfeita,
+- **$r = 0$** indica ausência de correlação linear.
+
+### Interpretação
+
+MUKAKA (2012) destaca que, embora o coeficiente de correlação de Pearson seja útil para identificar relações lineares, ele não captura associações não lineares. Além disso, sua interpretação deve ser feita com cautela, pois valores extremos ou outliers podem influenciar significativamente o resultado.
+
+### Aplicações
+
+O coeficiente de correlação de Pearson é amplamente utilizado em aprendizado de máquina para avaliar a relação entre variáveis de entrada e saída, em análise de dados para identificar padrões e em estudos científicos para validar hipóteses sobre associações entre variáveis.
+
 # Referências
 
 - DAMIANI, E. J. Uso da Distância de Mahalanobis para a Detecção de Rompimentos em Linhas de Injeção de Gás, 2021. Disponível em: [https://lume.ufrgs.br/bitstream/handle/10183/235773/001136697.pdf?sequence=1&isAllowed=y](https://lume.ufrgs.br/bitstream/handle/10183/235773/001136697.pdf?sequence=1&isAllowed=y). Acesso em: 15 de abr. 2025.
+
+- MUKAKA, M. M. A guide to appropriate use of correlation coefficient in medical research. _Malawi Medical Journal_, v. 24, n. 3, p. 69–71, 2012.
