add Similaridade de Cosseno to q1

--- a/Exercises_List_1/Q1.md
+++ b/Exercises_List_1/Q1.md
@@ -172,6 +172,37 @@ MUKAKA (2012) destaca que, embora o coeficiente de correlação de Pearson seja 
 
 O coeficiente de correlação de Pearson é amplamente utilizado em aprendizado de máquina para avaliar a relação entre variáveis de entrada e saída, em análise de dados para identificar padrões e em estudos científicos para validar hipóteses sobre associações entre variáveis.
 
+## Similaridade de Cosseno
+
+A similaridade de cosseno é uma métrica amplamente utilizada para medir a similaridade entre dois vetores em um espaço vetorial, com base no ângulo entre eles. Diferentemente de métricas como a distância Euclidiana, a similaridade de cosseno avalia a orientação dos vetores, ignorando suas magnitudes. Isso a torna especialmente útil em contextos onde a direção dos vetores é mais relevante do que seu tamanho, como em análise de texto e processamento de linguagem natural.
+
+A fórmula para calcular a similaridade de cosseno entre dois vetores $\mathbf{u} = (u_1, u_2, \ldots, u_n)$ e $\mathbf{v} = (v_1, v_2, \ldots, v_n)$ é dada por:
+
+```math
+\text{simCos}(\mathbf{u}, \mathbf{v}) = \frac{\mathbf{u} \cdot \mathbf{v}}{\|\mathbf{u}\| \|\mathbf{v}\|}
+```
+
+Onde:
+
+- $\mathbf{u} \cdot \mathbf{v}$ é o produto escalar dos vetores $\mathbf{u}$ e $\mathbf{v}$, calculado como $\sum_{i=1}^n u_i v_i$,
+- $\|\mathbf{u}\|$ e $\|\mathbf{v}\|$ são as normas (ou magnitudes) dos vetores $\mathbf{u}$ e $\mathbf{v}$, calculadas como $\|\mathbf{u}\| = \sqrt{\sum_{i=1}^n u_i^2}$ e $\|\mathbf{v}\| = \sqrt{\sum_{i=1}^n v_i^2}$.
+
+O valor da similaridade de cosseno varia entre -1 e 1:
+
+- **1** indica que os vetores estão perfeitamente alinhados (mesma direção),
+- **0** indica que os vetores são ortogonais (sem relação),
+- **-1** indica que os vetores estão em direções opostas.
+
+### Aplicações
+
+A similaridade de cosseno é amplamente utilizada em:
+
+- **Análise de texto:** Para medir a similaridade entre documentos representados como vetores de palavras (e.g., TF-IDF).
+- **Sistemas de recomendação:** Para comparar perfis de usuários ou itens.
+- **Processamento de linguagem natural:** Para avaliar a similaridade semântica entre frases ou palavras.
+
+Por sua capacidade de ignorar a magnitude dos vetores, a similaridade de cosseno é particularmente eficaz em cenários onde os dados são esparsos ou possuem escalas diferentes.
+
 # Referências
 
 - DAMIANI, E. J. Uso da Distância de Mahalanobis para a Detecção de Rompimentos em Linhas de Injeção de Gás, 2021. Disponível em: [https://lume.ufrgs.br/bitstream/handle/10183/235773/001136697.pdf?sequence=1&isAllowed=y](https://lume.ufrgs.br/bitstream/handle/10183/235773/001136697.pdf?sequence=1&isAllowed=y). Acesso em: 15 de abr. 2025.
