--- a/Exercises_List_1/Q3.md
+++ b/Exercises_List_1/Q3.md
@@ -140,3 +140,92 @@ def adagrad(x, y, w, b, alpha, num_iter):
 ```
 
 O AdaGrad é particularmente eficaz em problemas esparsos, onde alguns parâmetros são atualizados com mais frequência do que outros. No entanto, uma limitação do AdaGrad é que o acúmulo dos gradientes pode levar a uma redução excessiva na taxa de aprendizado ao longo do tempo, o que pode dificultar a convergência em problemas mais complexos. Apesar disso, ele introduziu conceitos importantes que serviram de base para algoritmos mais avançados, como o RMSProp e o Adam.
+
+## RMSProp
+
+## RMSProp
+
+O **RMSProp** (Root Mean Square Propagation ou Propagação da Raiz Quadrática Média) é um algoritmo de otimização que adapta a taxa de aprendizado para cada parâmetro, levando em consideração a média dos gradientes quadrados anteriores. Ele foi projetado para resolver problemas de convergência lenta em algoritmos como o AdaGrad, especialmente em problemas não convexos.
+
+A principal ideia do RMSProp é manter uma média móvel exponencial dos gradientes quadrados, em vez de acumulá-los indefinidamente. Isso evita que a taxa de aprendizado diminua excessivamente ao longo do tempo, como ocorre no AdaGrad. Além disso, o RMSProp inclui um termo de amortecimento (damping term) para controlar a taxa de aprendizado global.
+
+A fórmula de atualização do RMSProp é dada por:
+
+$\theta(t+1) = \theta(t) - \frac{\eta}{\sqrt{E[g^2]_t + \epsilon}} \nabla L(\theta(t))$
+
+Onde:
+
+- $\theta(t)$ representa os parâmetros do modelo na iteração $t$.
+- $\eta$ é a taxa de aprendizado inicial.
+- $E[g^2]_t$ é a média móvel exponencial dos gradientes quadrados até a iteração $t$.
+- $\epsilon$ é um pequeno valor adicionado para evitar divisões por zero.
+- $\nabla L(\theta(t))$ é o gradiente da função de perda em relação aos parâmetros $\theta(t)$.
+
+### Passo a Passo do Algoritmo RMSProp
+
+1. **Inicialização dos Parâmetros**:
+
+- Inicialize os parâmetros do modelo $\theta$ com valores iniciais.
+- Defina a taxa de aprendizado inicial $\eta$.
+- Inicialize o acumulador de gradientes $E[g^2]_t$ como uma matriz de zeros com a mesma dimensão dos parâmetros $\theta$.
+- Defina o fator de decaimento $\rho$ (geralmente $\rho = 0.9$).
+
+2. **Cálculo do Gradiente**:
+
+- Para cada iteração $t$, calcule o gradiente da função de perda $L$ em relação aos parâmetros $\theta(t)$: $g_t = \nabla L(\theta(t))$.
+
+3. **Atualização da Média Móvel Exponencial**:
+
+- Atualize o acumulador de gradientes com a média móvel exponencial:
+  $E[g^2]_t = \rho E[g^2]_{t-1} + (1 - \rho) g_t^2$.
+
+4. **Ajuste da Taxa de Aprendizado**:
+
+- Calcule a taxa de aprendizado adaptativa para cada parâmetro utilizando o acumulador de gradientes:
+  $\eta_t = \frac{\eta}{\sqrt{E[g^2]_t + \epsilon}}$.
+
+5. **Atualização dos Parâmetros**:
+
+- Atualize os parâmetros $\theta$ utilizando a taxa de aprendizado adaptativa:
+  $\theta(t+1) = \theta(t) - \eta_t \odot g_t$.
+
+6. **Repetição**:
+
+- Repita os passos acima para cada iteração até que um critério de parada seja atendido.
+
+### Implementação em Python
+
+```python
+import numpy as np
+
+# RMSProp implementation
+def rmsprop(x, y, w, b, alpha, num_iter, rho=0.9, epsilon=1e-8):
+   # initialize the gradient accumulators
+   Eg_w = np.zeros(w.shape)  # Accumulator for weights
+   Eg_b = 0  # Accumulator for bias
+
+   # initialize the loss array to store the loss at each iteration
+   loss = np.zeros(num_iter)
+
+   # iterate for the specified number of iterations
+   for i in range(num_iter):
+      # calculate the gradient of the loss function with respect to w and b
+      grad_w = -2 * np.dot(x.T, (y - np.dot(x, w) - b))  # Gradient for weights
+      grad_b = -2 * np.sum(y - np.dot(x, w) - b)  # Gradient for bias
+
+      # update the accumulators with the exponential moving average of squared gradients
+      Eg_w = rho * Eg_w + (1 - rho) * grad_w ** 2
+      Eg_b = rho * Eg_b + (1 - rho) * grad_b ** 2
+
+      # update the parameters using the RMSProp formula
+      w = w - alpha * grad_w / (np.sqrt(Eg_w) + epsilon)  # Update weights
+      b = b - alpha * grad_b / (np.sqrt(Eg_b) + epsilon)  # Update bias
+
+      # calculate the loss (mean squared error) for the current iteration
+      loss[i] = np.sum((y - np.dot(x, w) - b) ** 2) / x.shape[0]
+
+   # return the updated weights, bias, and the loss history
+   return w, b, loss
+```
+
+O RMSProp é amplamente utilizado em problemas de aprendizado profundo devido à sua capacidade de lidar com gradientes de diferentes magnitudes e sua eficiência em problemas não convexos. Ele também é a base para o algoritmo Adam, que combina as ideias do RMSProp e do Momentum para melhorar ainda mais o desempenho da otimização.
