add Adam Optimizer information

--- a/Exercises_List_1/Q3.md
+++ b/Exercises_List_1/Q3.md
@@ -143,8 +143,6 @@ O AdaGrad é particularmente eficaz em problemas esparsos, onde alguns parâmetr
 
 ## RMSProp
 
-## RMSProp
-
 O **RMSProp** (Root Mean Square Propagation ou Propagação da Raiz Quadrática Média) é um algoritmo de otimização que adapta a taxa de aprendizado para cada parâmetro, levando em consideração a média dos gradientes quadrados anteriores. Ele foi projetado para resolver problemas de convergência lenta em algoritmos como o AdaGrad, especialmente em problemas não convexos.
 
 A principal ideia do RMSProp é manter uma média móvel exponencial dos gradientes quadrados, em vez de acumulá-los indefinidamente. Isso evita que a taxa de aprendizado diminua excessivamente ao longo do tempo, como ocorre no AdaGrad. Além disso, o RMSProp inclui um termo de amortecimento (damping term) para controlar a taxa de aprendizado global.
@@ -229,3 +227,100 @@ def rmsprop(x, y, w, b, alpha, num_iter, rho=0.9, epsilon=1e-8):
 ```
 
 O RMSProp é amplamente utilizado em problemas de aprendizado profundo devido à sua capacidade de lidar com gradientes de diferentes magnitudes e sua eficiência em problemas não convexos. Ele também é a base para o algoritmo Adam, que combina as ideias do RMSProp e do Momentum para melhorar ainda mais o desempenho da otimização.
+
+## Adam
+
+## Adam
+
+O **Adam** (Adaptive Moment Estimation ou Estimativa de Momento Adaptativo) é um algoritmo de otimização que combina as ideias do **Momentum** e do **RMSProp** para melhorar a eficiência e a estabilidade do treinamento de modelos de aprendizado de máquina, especialmente redes neurais profundas. Ele é amplamente utilizado devido à sua capacidade de lidar com gradientes esparsos, adaptar a taxa de aprendizado para cada parâmetro e corrigir os momentos iniciais.
+
+### Principais Características do Adam
+
+1. **Momentum**: O Adam utiliza a média móvel exponencial dos gradientes passados para acelerar a convergência em direções consistentes. Isso ajuda a suavizar as atualizações e evita oscilações excessivas.
+
+2. **RMSProp**: O algoritmo também rastreia a média móvel exponencial dos gradientes quadráticos passados, permitindo que a taxa de aprendizado seja adaptada para cada parâmetro com base na magnitude dos gradientes.
+
+3. **Correção de Viés**: Para corrigir o viés introduzido nos momentos iniciais (quando as médias móveis ainda estão próximas de zero), o Adam inclui termos de correção de viés, garantindo que as estimativas sejam mais precisas.
+
+### Fórmulas do Adam
+
+A atualização dos pesos no Adam é realizada utilizando as seguintes fórmulas:
+
+1. **Cálculo do Gradiente**:
+
+$g_t = \nabla L(\theta(t))$
+
+2. **Atualização do Momento (Primeiro Momento)**:
+   $
+  m_t = \beta_1 m_{t-1} + (1 - \beta_1) g_t
+  $
+
+3. **Atualização do RMSProp (Segundo Momento)**:
+   $
+  v_t = \beta_2 v_{t-1} + (1 - \beta_2) g_t^2
+  $
+
+4. **Correção de Viés**:
+   $
+  \hat{m}_t = \frac{m_t}{1 - \beta_1^t}, \quad \hat{v}_t = \frac{v_t}{1 - \beta_2^t}
+  $
+
+5. **Atualização dos Pesos**:
+   $
+  \theta(t+1) = \theta(t) - \frac{\eta}{\sqrt{\hat{v}_t} + \epsilon} \hat{m}_t
+  $
+
+Onde:
+
+- $ \theta(t) $: Parâmetros do modelo na iteração $( t )$.
+- $g_t$: Gradiente da função de perda em relação aos parâmetros $ \theta(t)$.
+- $ m_t $: Média móvel exponencial dos gradientes (primeiro momento).
+- $ v_t $: Média móvel exponencial dos gradientes quadráticos (segundo momento).
+- $ \beta_1, \beta_2 $: Taxas de decaimento para os momentos (geralmente $ \beta_1 = 0.9 $ e $ \beta_2 = 0.999 $).
+- $ \eta $: Taxa de aprendizado.
+- $ \epsilon $: Pequeno valor para evitar divisões por zero (geralmente $ \epsilon = 10^{-8}$).
+
+### Implementação em Python
+
+```python
+import numpy as np
+
+# Adam implementation
+def adam(x, y, w, b, alpha, num_iter, beta1=0.9, beta2=0.999, epsilon=1e-8):
+   # Initialize moment estimates
+   m_w, m_b = np.zeros(w.shape), 0  # First moment (mean)
+   v_w, v_b = np.zeros(w.shape), 0  # Second moment (variance)
+
+   # Initialize loss array
+   loss = np.zeros(num_iter)
+
+   for t in range(1, num_iter + 1):
+      # Compute gradients
+      grad_w = -2 * np.dot(x.T, (y - np.dot(x, w) - b))
+      grad_b = -2 * np.sum(y - np.dot(x, w) - b)
+
+      # Update biased first moment estimate
+      m_w = beta1 * m_w + (1 - beta1) * grad_w
+      m_b = beta1 * m_b + (1 - beta1) * grad_b
+
+      # Update biased second moment estimate
+      v_w = beta2 * v_w + (1 - beta2) * (grad_w ** 2)
+      v_b = beta2 * v_b + (1 - beta2) * (grad_b ** 2)
+
+      # Correct bias in first and second moment estimates
+      m_w_hat = m_w / (1 - beta1 ** t)
+      m_b_hat = m_b / (1 - beta1 ** t)
+      v_w_hat = v_w / (1 - beta2 ** t)
+      v_b_hat = v_b / (1 - beta2 ** t)
+
+      # Update parameters
+      w = w - alpha * m_w_hat / (np.sqrt(v_w_hat) + epsilon)
+      b = b - alpha * m_b_hat / (np.sqrt(v_b_hat) + epsilon)
+
+      # Compute loss
+      loss[t - 1] = np.sum((y - np.dot(x, w) - b) ** 2) / x.shape[0]
+
+   return w, b, loss
+```
+
+O Adam é amplamente utilizado em aprendizado profundo devido à sua robustez e eficiência. Ele combina as vantagens do Momentum e do RMSProp, tornando-o adequado para uma ampla variedade de problemas de otimização. Além disso, sua capacidade de ajustar dinamicamente a taxa de aprendizado para cada parâmetro o torna uma escolha padrão em muitos frameworks de aprendizado de máquina.
