add conclusion to Q3

--- a/Exercises_List_1/Q3.md
+++ b/Exercises_List_1/Q3.md
@@ -12,6 +12,8 @@ Estes métodos ou otimizadores são utilizados no processo de aprendizagem de re
 Os algoritmos de otimização desempenham um papel crucial no
 treinamento de redes neurais, ajustando seus parâmetros para minimizar a função de perda e, consequentemente, melhorar o desempenho do modelo. Um exemplo clássico é o Gradient Descent (GD), que utiliza o gradiente da função de custo para atualizar os pesos da rede em direção ao mínimo global. No entanto, o GD pode enfrentar dificuldades, como ficar preso em mínimos locais. Para superar essas limitações, surgiram variações e métodos mais avançados, como o SGD, o AdaGrad, o RMSProp e o Adam, que serão discutidos em detalhes a seguir.
 
+# Sessão Resposta
+
 ## Gradiente Estocástico (SGM)
 
 O Gradiente Estocástico (SGM) é uma variação do método de Gradiente Descendente, amplamente utilizado para otimização em aprendizado de máquina. No método do Gradiente Descendente (GD), a atualização dos pesos é realizada utilizando o gradiente calculado em relação a todo o conjunto de dados.
@@ -324,3 +326,13 @@ def adam(x, y, w, b, alpha, num_iter, beta1=0.9, beta2=0.999, epsilon=1e-8):
 ```
 
 O Adam é amplamente utilizado em aprendizado profundo devido à sua robustez e eficiência. Ele combina as vantagens do Momentum e do RMSProp, tornando-o adequado para uma ampla variedade de problemas de otimização. Além disso, sua capacidade de ajustar dinamicamente a taxa de aprendizado para cada parâmetro o torna uma escolha padrão em muitos frameworks de aprendizado de máquina.
+
+# Conclusão
+
+Neste estudo, exploramos os principais algoritmos de otimização utilizados no treinamento de redes neurais, destacando suas características, vantagens e limitações. Cada otimizador possui pontos fortes e fracos, sendo adequado para diferentes tipos de problemas e características dos dados.
+
+O **SGD** é um método básico que, embora eficiente em alguns casos, apresenta limitações como a taxa de aprendizado constante e dificuldades em lidar com pontos de sela. O **AdaGrad** introduz melhorias ao ajustar dinamicamente a taxa de aprendizado, sendo particularmente útil para dados esparsos. O **RMSProp**, por sua vez, resolve problemas de convergência lenta do AdaGrad ao utilizar uma média móvel exponencial dos gradientes quadrados, tornando-o mais eficiente em problemas não convexos.
+
+Por fim, o **Adam** combina as melhores características do Momentum e do RMSProp, oferecendo uma solução robusta e versátil. Ele é amplamente utilizado devido à sua eficácia, menor necessidade de ajuste de hiper parâmetros e capacidade de lidar com gradientes esparsos. Apesar de ser o otimizador padrão recomendado para a maioria das aplicações, é importante lembrar que nenhum algoritmo é perfeito e que a escolha do otimizador deve considerar as necessidades específicas do problema e os dados disponíveis.
+
+Portanto, compreender as diferenças entre os algoritmos e suas aplicações é essencial para selecionar a melhor abordagem, garantindo uma convergência eficiente e um desempenho superior do modelo de aprendizado profundo.
