--- a/Exercises_List_1/Q2.md
+++ b/Exercises_List_1/Q2.md
@@ -14,36 +14,70 @@ Demonstre com base na expansão em série de Taylor:
 
 Para demonstrar que o método do gradiente da descida mais íngreme é dado por $\mathbf{w}(n+1) = \mathbf{w}(n) - \eta \mathbf{g}(\mathbf{w}(n))$, considerando a expansão em série de Taylor fornecida.
 
-O objetivo do método do gradiente da descida mais íngreme é minimizar a função de erro $E(\mathbf{w})$. Para isso, escolhemos $\Delta \mathbf{w}(n)$ de forma que a direção de atualização seja oposta ao gradiente $\mathbf{g}(\mathbf{w}(n))$, pois o gradiente aponta para a direção de maior crescimento da função.
-
-Desconsiderando os termos de ordem superior ($O(\|\Delta \mathbf{w}\|^3)$) e assumindo que $\Delta \mathbf{w}(n)$ é pequeno, podemos aproximar a variação da função de erro como:
+Substituindo $\Delta \mathbf{w}(n) = -\eta \mathbf{g}(\mathbf{w}(n))$ na expansão em série de Taylor, temos:
 
 $$
-E(\mathbf{w}(n) + \Delta \mathbf{w}(n)) \approx E(\mathbf{w}(n)) + \mathbf{g}^t(\mathbf{w}(n)) \Delta \mathbf{w}(n).
+E(\mathbf{w}(n+1)) = E(\mathbf{w}(n) - \eta \mathbf{g}(\mathbf{w}(n)))
 $$
 
-Para minimizar $E(\mathbf{w}(n) + \Delta \mathbf{w}(n))$, escolhemos $\Delta \mathbf{w}(n)$ na direção oposta ao gradiente, ou seja:
+Expandindo a expressão, obtemos:
 
 $$
-\Delta \mathbf{w}(n) = -\eta \mathbf{g}(\mathbf{w}(n)),
+E(\mathbf{w}(n+1)) \approx E(\mathbf{w}(n)) + \mathbf{g}^t(\mathbf{w}(n))(-\eta \mathbf{g}(\mathbf{w}(n))) + \frac{1}{2}(-\eta \mathbf{g}(\mathbf{w}(n)))^t \mathbf{H}(\mathbf{w}(n))(-\eta \mathbf{g}(\mathbf{w}(n))) + O(\eta^3)
 $$
 
-onde $\eta > 0$ é o coeficiente de aprendizagem que controla o tamanho do passo.
-
-Substituindo $\Delta \mathbf{w}(n)$ na equação de atualização do vetor $\mathbf{w}$, temos:
+Simplificando os termos:
 
 $$
-\mathbf{w}(n+1) = \mathbf{w}(n) + \Delta \mathbf{w}(n).
+E(\mathbf{w}(n+1)) \approx E(\mathbf{w}(n)) - \eta \mathbf{g}^t(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n)) + \frac{1}{2} \eta^2 \mathbf{g}^t(\mathbf{w}(n)) \mathbf{H}(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n)) + O(\eta^3)
 $$
 
-Logo:
+Quando utilizamos o método do gradiente descendente, o objetivo é minimizar a função de erro $E(\mathbf{w})$, ou seja, queremos encontrar o mínimo da função. Para isso, buscamos a direção de maior descida da função, que é oposta à direção do gradiente $\mathbf{g}(\mathbf{w}(n))$. A regra de atualização do método do gradiente descendente é simplesmente atualizar os pesos $\mathbf{w}(n)$ na direção do gradiente, com um fator de aprendizado $\eta$ que determina o tamanho do passo de atualização.
+
+Assim, a partir da aproximação acima, podemos aproximar $E(\mathbf{w}(n+1))$ por $E(\mathbf{w}(n)) - \eta \mathbf{g}^t(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n))$. Para isso, basta igualar essa aproximação a $E(\mathbf{w}(n+1))$ e manipular a expressão para chegar em uma expressão para $\mathbf{w}(n+1)$. Isso pode ser feito da seguinte forma:
 
 $$
-\mathbf{w}(n+1) = \mathbf{w}(n) - \eta \mathbf{g}(\mathbf{w}(n)).
+E(\mathbf{w}(n+1)) = E(\mathbf{w}(n)) - \eta \mathbf{g}^t(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n))
 $$
 
-Portanto, demonstramos que o método do gradiente da descida mais íngreme é dado por:
+Como queremos encontrar a atualização para os pesos $\mathbf{w}$, basta pegar a derivada em relação a $\mathbf{w}(n+1)$ em ambos os lados:
 
 $$
-\mathbf{w}(n+1) = \mathbf{w}(n) - \eta \mathbf{g}(\mathbf{w}(n)).
+\frac{\partial E(\mathbf{w}(n+1))}{\partial \mathbf{w}(n+1)} \approx \frac{\partial E(\mathbf{w}(n))}{\partial \mathbf{w}(n+1)} - \frac{\eta \mathbf{g}^t(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n))}{\partial \mathbf{w}(n+1)}
 $$
+
+Note que a derivada da expressão à direita é zero, uma vez que o gradiente local $\mathbf{g}(\mathbf{w}(n))$ não depende de $\mathbf{w}(n+1)$. Logo, temos:
+
+$$
+\frac{\partial E(\mathbf{w}(n+1))}{\partial \mathbf{w}(n+1)} \approx \frac{\partial E(\mathbf{w}(n))}{\partial \mathbf{w}(n+1)}
+$$
+
+Agora, podemos substituir $\mathbf{w}(n+1)$ por $\mathbf{w}(n) - \eta \mathbf{g}(\mathbf{w}(n))$ para obter:
+
+$$
+\frac{\partial E(\mathbf{w}(n+1))}{\partial \mathbf{w}(n+1)} \approx \frac{\partial E(\mathbf{w}(n))}{\partial \mathbf{w}(n+1)} = \frac{\partial E(\mathbf{w}(n))}{\partial \mathbf{w}(n)} \cdot \frac{\partial \mathbf{w}(n)}{\partial \mathbf{w}(n+1)}
+$$
+
+$$
+= -\mathbf{g}^t(\mathbf{w}(n))
+$$
+
+Assim, chegamos em:
+
+$$
+-\mathbf{g}^t(\mathbf{w}(n+1)) \approx -\mathbf{g}^t(\mathbf{w}(n))
+$$
+
+Ou seja:
+
+$$
+\mathbf{g}^t(\mathbf{w}(n+1)) \approx \mathbf{g}^t(\mathbf{w}(n))
+$$
+
+E, finalmente, temos a regra de atualização do método do gradiente descendente:
+
+$$
+\mathbf{w}(n+1) = \mathbf{w}(n) - \eta \mathbf{g}(\mathbf{w}(n))
+$$
+
+Essa regra de atualização nos permite atualizar os pesos da rede neural em direção ao mínimo da função de erro $E(\mathbf{w})$.
