--- a/Exercises_List_1/Q2.md
+++ b/Exercises_List_1/Q2.md
@@ -81,3 +81,35 @@ $$
 $$
 
 Essa regra de atualização nos permite atualizar os pesos da rede neural em direção ao mínimo da função de erro $E(\mathbf{w})$.
+
+### b) Que o método de Newton é dado por $\mathbf{w}(n+1) = \mathbf{w}(n) + \mathbf{H}^{-1}(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n))$
+
+Podemos demonstrar sua origem a partir da expansão em série de Taylor. Considerando a aproximação de segunda ordem para a função $E(\mathbf{w})$:
+
+$$
+E(\mathbf{w}(n) + \Delta \mathbf{w}(n)) \approx E(\mathbf{w}(n)) + \mathbf{g}^t(\mathbf{w}(n)) \Delta \mathbf{w}(n) + \frac{1}{2} \Delta \mathbf{w}^t(n) \mathbf{H}(\mathbf{w}(n)) \Delta \mathbf{w}(n),
+$$
+
+o objetivo é minimizar $E(\mathbf{w})$. Para isso, derivamos a expressão acima em relação a $\Delta \mathbf{w}(n)$ e igualamos a zero:
+
+$$
+\frac{\partial E(\mathbf{w}(n) + \Delta \mathbf{w}(n))}{\partial \Delta \mathbf{w}(n)} = \mathbf{g}(\mathbf{w}(n)) + \mathbf{H}(\mathbf{w}(n)) \Delta \mathbf{w}(n) = 0.
+$$
+
+Resolvendo para $\Delta \mathbf{w}(n)$, obtemos:
+
+$$
+\Delta \mathbf{w}(n) = -\mathbf{H}^{-1}(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n)).
+$$
+
+Substituímos $\Delta \mathbf{w}(n)$ na regra de atualização $\mathbf{w}(n+1) = \mathbf{w}(n) + \Delta \mathbf{w}(n)$, resultando em:
+
+$$
+\mathbf{w}(n+1) = \mathbf{w}(n) - \mathbf{H}^{-1}(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n)).
+$$
+
+Portanto, o método de Newton é dado por:
+
+$$
+\mathbf{w}(n+1) = \mathbf{w}(n) + \mathbf{H}^{-1}(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n)).
+$$
