adicionando em negrito a formatação

--- a/Exercises_List_1/Q2.md
+++ b/Exercises_List_1/Q2.md
@@ -8,7 +8,7 @@ $$
 
 onde $\mathbf{g}(\mathbf{w}(n))$ é o vetor gradiente local definido por $\mathbf{g}(\mathbf{w}) = \frac{\partial E(\mathbf{w})}{\partial \mathbf{w}}$ e $\mathbf{H}(\mathbf{w})$ é a matriz Hessiana, definida por $\mathbf{H}(\mathbf{w}) = \frac{\partial^2 E(\mathbf{w})}{\partial \mathbf{w}^2}$.
 
-Demonstre com base na expansão em série de Taylor:
+**Demonstre com base na expansão em série de Taylor:**
 
 ### a) Que o método do gradiente da descida mais íngreme é dado por: $\mathbf{w}(n+1) = \mathbf{w}(n) - \eta \mathbf{g}(\mathbf{w}(n))$ . Onde $\eta$ é o coeficiente de aprendizagem ou passo do método.
 
