--- a/Exercises_List_1/Q2.md
+++ b/Exercises_List_1/Q2.md
@@ -113,3 +113,31 @@ Portanto, o método de Newton é dado por:
 $$
 \mathbf{w}(n+1) = \mathbf{w}(n) + \mathbf{H}^{-1}(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n)).
 $$
+
+### c) Que o $\eta^*$ ótimo é dado por $\frac{\mathbf{g}(\mathbf{w})^t \mathbf{g}(\mathbf{w})}{\mathbf{g}(\mathbf{w})^t \mathbf{H}(\mathbf{w}) \mathbf{g}(\mathbf{w})}$, assumindo a matriz $\mathbf{H}$ definida positiva.
+
+Para determinar o valor ótimo de $\eta$, consideramos a expansão em série de Taylor para a função de erro $E(\mathbf{w})$:
+
+$$
+E(\mathbf{w}(n+1)) \approx E(\mathbf{w}(n)) - \eta \mathbf{g}^t(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n)) + \frac{1}{2} \eta^2 \mathbf{g}^t(\mathbf{w}(n)) \mathbf{H}(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n)).
+$$
+
+Nosso objetivo é minimizar $E(\mathbf{w}(n+1))$ em relação a $\eta$. Para isso, derivamos a expressão acima em relação a $\eta$ e igualamos a zero:
+
+$$
+\frac{\partial E(\mathbf{w}(n+1))}{\partial \eta} = -\mathbf{g}^t(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n)) + \eta \mathbf{g}^t(\mathbf{w}(n)) \mathbf{H}(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n)) = 0.
+$$
+
+Resolvendo para $\eta$, obtemos:
+
+$$
+\eta = \frac{\mathbf{g}^t(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n))}{\mathbf{g}^t(\mathbf{w}(n)) \mathbf{H}(\mathbf{w}(n)) \mathbf{g}(\mathbf{w}(n))}.
+$$
+
+Portanto, o valor ótimo de $\eta$, denotado por $\eta^*$, é dado por:
+
+$$
+\eta^* = \frac{\mathbf{g}(\mathbf{w})^t \mathbf{g}(\mathbf{w})}{\mathbf{g}(\mathbf{w})^t \mathbf{H}(\mathbf{w}) \mathbf{g}(\mathbf{w})}.
+$$
+
+Essa expressão assume que a matriz Hessiana $\mathbf{H}(\mathbf{w})$ é definida positiva, garantindo que o denominador seja estritamente positivo.
