fix format formulas

--- a/Exercises_List_1/Q3.md
+++ b/Exercises_List_1/Q3.md
@@ -232,8 +232,6 @@ O RMSProp é amplamente utilizado em problemas de aprendizado profundo devido à
 
 ## Adam
 
-## Adam
-
 O **Adam** (Adaptive Moment Estimation ou Estimativa de Momento Adaptativo) é um algoritmo de otimização que combina as ideias do **Momentum** e do **RMSProp** para melhorar a eficiência e a estabilidade do treinamento de modelos de aprendizado de máquina, especialmente redes neurais profundas. Ele é amplamente utilizado devido à sua capacidade de lidar com gradientes esparsos, adaptar a taxa de aprendizado para cada parâmetro e corrigir os momentos iniciais.
 
 ### Principais Características do Adam
@@ -253,34 +251,26 @@ A atualização dos pesos no Adam é realizada utilizando as seguintes fórmulas
 $g_t = \nabla L(\theta(t))$
 
 2. **Atualização do Momento (Primeiro Momento)**:
-   $
-  m_t = \beta_1 m_{t-1} + (1 - \beta_1) g_t
-  $
+   $m_t = \beta_1 m_{t-1} + (1 - \beta_1) g_t$
 
 3. **Atualização do RMSProp (Segundo Momento)**:
-   $
-  v_t = \beta_2 v_{t-1} + (1 - \beta_2) g_t^2
-  $
+   $v_t = \beta_2 v_{t-1} + (1 - \beta_2) g_t^2$
 
 4. **Correção de Viés**:
-   $
-  \hat{m}_t = \frac{m_t}{1 - \beta_1^t}, \quad \hat{v}_t = \frac{v_t}{1 - \beta_2^t}
-  $
+   $\hat{m}_t = \frac{m_t}{1 - \beta_1^t}, \quad \hat{v}_t = \frac{v_t}{1 - \beta_2^t}$
 
 5. **Atualização dos Pesos**:
-   $
-  \theta(t+1) = \theta(t) - \frac{\eta}{\sqrt{\hat{v}_t} + \epsilon} \hat{m}_t
-  $
+   $\theta(t+1) = \theta(t) - \frac{\eta}{\sqrt{\hat{v}_t} + \epsilon} \hat{m}_t$
 
 Onde:
 
-- $ \theta(t) $: Parâmetros do modelo na iteração $( t )$.
-- $g_t$: Gradiente da função de perda em relação aos parâmetros $ \theta(t)$.
+- $\theta(t)$: Parâmetros do modelo na iteração $(t)$.
+- $g_t$: Gradiente da função de perda em relação aos parâmetros $\theta(t)$.
 - $ m_t $: Média móvel exponencial dos gradientes (primeiro momento).
 - $ v_t $: Média móvel exponencial dos gradientes quadráticos (segundo momento).
-- $ \beta_1, \beta_2 $: Taxas de decaimento para os momentos (geralmente $ \beta_1 = 0.9 $ e $ \beta_2 = 0.999 $).
-- $ \eta $: Taxa de aprendizado.
-- $ \epsilon $: Pequeno valor para evitar divisões por zero (geralmente $ \epsilon = 10^{-8}$).
+- $\beta_1, \beta_2$: Taxas de decaimento para os momentos (geralmente $\beta_1 = 0.9$ e $\beta_2 = 0.999$).
+- $\eta$: Taxa de aprendizado.
+- $\epsilon$: Pequeno valor para evitar divisões por zero (geralmente $\epsilon = 10^{-8}$).
 
 ### Implementação em Python
 
