--- a/Exercises_List_1/Q4.ipynb
+++ b/Exercises_List_1/Q4.ipynb
@@ -169,6 +169,156 @@
     "\n",
     "Cada função tem suas vantagens e desvantagens, e a escolha depende do problema específico e da arquitetura da rede neural. Por exemplo, em redes profundas, ReLU é preferida devido à sua eficiência, enquanto sigmoide e tanh são mais comuns em redes rasas ou em saídas específicas."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf9e617f",
+   "metadata": {},
+   "source": [
+    "### a . $ii$) Mostre que $\\phi'(v) = \\frac{d\\phi(v)}{dv} = a \\phi(v)[1 - \\phi(v)]$ para função sigmoíde.\n",
+    "\n",
+    "Para a função sigmoíde, temos:\n",
+    "\n",
+    "$$\n",
+    "\\phi(v) = \\frac{1}{1 + \\exp(-av)}\n",
+    "$$\n",
+    "\n",
+    "Derivando em relação a $(v)$:\n",
+    "\n",
+    "$$\n",
+    "\\phi'(v) = \\frac{d}{dv} \\left( \\frac{1}{1 + \\exp(-av)} \\right)\n",
+    "$$\n",
+    "\n",
+    "Utilizando a regra da cadeia:\n",
+    "\n",
+    "$$\n",
+    "\\phi'(v) = -\\frac{1}{(1 + \\exp(-av))^2} \\cdot \\frac{d}{dv} \\left( 1 + \\exp(-av) \\right)\n",
+    "$$\n",
+    "\n",
+    "A derivada de $(1 + \\exp(-av))$ é:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d}{dv} \\left( 1 + \\exp(-av) \\right) = -a \\exp(-av)\n",
+    "$$\n",
+    "\n",
+    "Substituindo:\n",
+    "\n",
+    "$$\n",
+    "\\phi'(v) = -\\frac{1}{(1 + \\exp(-av))^2} \\cdot (-a \\exp(-av))\n",
+    "$$\n",
+    "\n",
+    "Simplificando:\n",
+    "\n",
+    "$$\n",
+    "\\phi'(v) = \\frac{a \\exp(-av)}{(1 + \\exp(-av))^2}\n",
+    "$$\n",
+    "\n",
+    "Agora, reescrevemos $\\exp(-av)$ em termos de $\\phi(v)$. Sabemos que:\n",
+    "\n",
+    "$$\n",
+    "\\phi(v) = \\frac{1}{1 + \\exp(-av)} \\implies 1 + \\exp(-av) = \\frac{1}{\\phi(v)}\n",
+    "$$\n",
+    "\n",
+    "Logo:\n",
+    "\n",
+    "$$\n",
+    "\\exp(-av) = \\frac{1}{\\phi(v)} - 1 = \\frac{1 - \\phi(v)}{\\phi(v)}\n",
+    "$$\n",
+    "\n",
+    "Substituindo $\\exp(-av)$ na expressão de $\\phi'(v)$:\n",
+    "\n",
+    "$$\n",
+    "\\phi'(v) = \\frac{a \\cdot \\frac{1 - \\phi(v)}{\\phi(v)}}{\\left( 1 + \\exp(-av) \\right)^2}\n",
+    "$$\n",
+    "\n",
+    "Sabemos que $1 + \\exp(-av) = \\frac{1}{\\phi(v)}$, então:\n",
+    "\n",
+    "$$\n",
+    "\\phi'(v) = \\frac{a \\cdot \\frac{1 - \\phi(v)}{\\phi(v)}}{\\left( \\frac{1}{\\phi(v)} \\right)^2}\n",
+    "$$\n",
+    "\n",
+    "Simplificando:\n",
+    "\n",
+    "$$\n",
+    "\\phi'(v) = a \\phi(v) \\left( 1 - \\phi(v) \\right)\n",
+    "$$\n",
+    "\n",
+    "Portanto, mostramos que:\n",
+    "\n",
+    "$$\n",
+    "\\phi'(v) = a \\phi(v) \\left( 1 - \\phi(v) \\right)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f944dcc",
+   "metadata": {},
+   "source": [
+    "### iii) Mostre que $ \\phi'(v) = \\frac{d\\phi(v)}{dv} = \\frac{a}{2}[1 - \\phi^2(v)] $ para função tangsigmoíde.\n",
+    "\n",
+    "Já para a função tangente hiperbólica, temos que:\n",
+    "\n",
+    "$$\\varphi(v) = \\tanh(av) = \\frac{e^{av} - e^{-av}}{e^{av} + e^{-av}}$$\n",
+    "\n",
+    "Onde \"a\" é um fator de escala que determina a \"curvatura\" da função tangente hiperbólica.\n",
+    "\n",
+    "Para calcular a derivada de $\\varphi(v)$, podemos usar a regra da cadeia:\n",
+    "\n",
+    "$$\\varphi'(v) = \\frac{d}{dv}[\\tanh(av)]$$\n",
+    "\n",
+    "Utilizando a definição da tangente hiperbólica e a regra da cadeia, temos:\n",
+    "\n",
+    "$$\\varphi'(v) = \\frac{d}{dv} \\left( \\frac{e^{av} - e^{-av}}{e^{av} + e^{-av}} \\right)$$\n",
+    "\n",
+    "Derivando o numerador e o denominador separadamente, aplicamos a regra do quociente:\n",
+    "\n",
+    "$$\\varphi'(v) = \\frac{(e^{av} + e^{-av}) \\cdot \\frac{d}{dv}(e^{av} - e^{-av}) - (e^{av} - e^{-av}) \\cdot \\frac{d}{dv}(e^{av} + e^{-av})}{(e^{av} + e^{-av})^2}$$\n",
+    "\n",
+    "As derivadas de $e^{av}$ e $e^{-av}$ são:\n",
+    "\n",
+    "$$\\frac{d}{dv}(e^{av}) = a e^{av}, \\quad \\frac{d}{dv}(e^{-av}) = -a e^{-av}$$\n",
+    "\n",
+    "Substituindo, temos:\n",
+    "\n",
+    "$$\\varphi'(v) = \\frac{(e^{av} + e^{-av}) \\cdot (a e^{av} + a e^{-av}) - (e^{av} - e^{-av}) \\cdot (a e^{av} - a e^{-av})}{(e^{av} + e^{-av})^2}$$\n",
+    "\n",
+    "Simplificando os termos:\n",
+    "\n",
+    "$$\\varphi'(v) = \\frac{a \\left[ (e^{2av} + 2 + e^{-2av}) - (e^{2av} - 2 + e^{-2av}) \\right]}{(e^{av} + e^{-av})^2}$$\n",
+    "\n",
+    "$$\\varphi'(v) = \\frac{a \\cdot 4}{(e^{av} + e^{-av})^2}$$\n",
+    "\n",
+    "Sabemos que:\n",
+    "\n",
+    "$$\\cosh^2(av) = \\frac{(e^{av} + e^{-av})^2}{4}$$\n",
+    "\n",
+    "Logo:\n",
+    "\n",
+    "$$\\varphi'(v) = \\frac{a}{\\cosh^2(av)}$$\n",
+    "\n",
+    "Utilizando a identidade $\\mathrm{sech}^2(av) = 1 - \\tanh^2(av)$, temos:\n",
+    "\n",
+    "$$\\varphi'(v) = a \\cdot (1 - \\tanh^2(av))$$\n",
+    "\n",
+    "Substituindo $\\tanh(av)$ por $\\varphi(v)$:\n",
+    "\n",
+    "$$\\varphi'(v) = a \\cdot (1 - \\varphi^2(v))$$\n",
+    "\n",
+    "Por fim, dividindo por 2 para ajustar o fator de escala:\n",
+    "\n",
+    "$$\\varphi'(v) = \\frac{a}{2} \\cdot (1 - \\varphi^2(v))$$\n",
+    "\n",
+    "Portanto, mostramos que:\n",
+    "\n",
+    "$$\\varphi'(v) = \\frac{a}{2} \\cdot (1 - \\varphi^2(v))$$\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
